Adding code after review